--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
                 <p><strong>Tech Used:</strong> Python, Flask, HTML, Azure</p>
 
-                <a href="#">GitHub Repository</a>
+                <a href="https://github.com/satyamkr3103/todo">GitHub Repository</a>
             </div>
         </div>
     </section>
@@ -127,17 +127,17 @@
         <h2>Links & Contact</h2>
 
         <ul>
-            <li><a href="#">GitHub</a></li>
-            <li><a href="#">LinkedIn</a></li>
-            <li><a href="mailto:your-email@example.com">Email</a></li>
+            <li><a href="https://github.com/satyamkr3103">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/satyam-kr31">LinkedIn</a></li>
+            <li><a href="satyamkr3103@gmail.com">Email</a></li>
         </ul>
     </section>
 
     <footer>
         <p>© 2026 Satyam Kumar</p>
         <p>
-            <a href="#">GitHub</a> |
-            <a href="#">LinkedIn</a>
+            <a href="https://github.com/satyamkr3103">GitHub</a> |
+            <a href="https://www.linkedin.com/in/satyam-kr31">LinkedIn</a>
         </p>
     </footer>
 </body>
