--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                 <p><strong>Tech Used:</strong> Unity, C#, Android</p>
 
-                <a href="#">GitHub Repository</a>
+                <a href="https://github.com/satyamkr3103/3D-shooter-prototype">GitHub Repository</a>
             </div>
 
             <!-- To-Do App -->
