--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <ul>
             <li><a href="https://github.com/satyamkr3103">GitHub</a></li>
             <li><a href="https://www.linkedin.com/in/satyam-kr31">LinkedIn</a></li>
-            <li><a href="satyamkr3103@gmail.com">Email</a></li>
+            <li><a href="mailto:satyamkr3103@gmail.com">Email</a></li>
         </ul>
     </section>
 
@@ -141,5 +141,6 @@
         </p>
     </footer>
 </body>
+
 
 </html>
