--- a/index.html
+++ b/index.html
@@ -47,6 +47,44 @@
         <h2>Projects</h2>
 
         <div class="projects-container">
+            <!-- Time Moves When You Move -->
+            <div class="project">
+                <h3>Time Moves When You Move</h3>
+
+                <p>
+                    <strong>Still in Motion</strong> is a minimalist 2D puzzle game built in Unity (2022 LTS) that
+                    explores
+                    the relationship between movement and time.
+                </p>
+
+                <p>
+                    The core mechanic is simple but powerful: <strong>time only moves when the player moves</strong>.
+                    When the player stops, the entire world freezes — including enemies, physics objects, and hazards.
+                </p>
+
+                <p>
+                    This design forces players to plan every action carefully, turning even simple puzzles into
+                    thoughtful challenges.
+                </p>
+
+                <p><strong>Level Design:</strong></p>
+                <ul>
+                    <li>Level 1 introduces the core mechanic through environmental puzzles</li>
+                    <li>Level 2 expands spatial reasoning with longer, indirect solutions</li>
+                    <li>Level 3 introduces enemies, adding light pressure to puzzle-solving</li>
+                </ul>
+
+                <p>
+                    All puzzles are designed to be fair and readable, relying on visual clarity and player discovery
+                    rather than tutorials. The game focuses on clean systems and low-performance overhead,
+                    making it suitable for low-spec hardware.
+                </p>
+
+                <p><strong>Tech Used:</strong> Unity (2022 LTS), C#</p>
+
+                <a href="#" target="_blank">Gameplay / Demo (Coming Soon)</a>
+            </div>
+            
             <!-- Unity Project -->
             <div class="project">
                 <h3>3D Story-Driven Shooter Prototype (Unity)</h3>
@@ -141,6 +179,5 @@
         </p>
     </footer>
 </body>
-
 
 </html>
