added link of repo

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h3>Time Moves When You Move</h3>
 
                 <p>
-                    <strong>Still in Motion</strong> is a minimalist 2D puzzle game built in Unity (2022 LTS) that
+                    <strong>When You Move</strong> is a minimalist 2D puzzle game built in Unity (2022 LTS) that
                     explores
                     the relationship between movement and time.
                 </p>
@@ -82,9 +82,10 @@
 
                 <p><strong>Tech Used:</strong> Unity (2022 LTS), C#</p>
 
+                <a href="https://github.com/satyamkr3103/Time-moves-when-you-move">GitHub Repository</a>
                 <a href="#" target="_blank">Gameplay / Demo (Coming Soon)</a>
             </div>
-            
+
             <!-- Unity Project -->
             <div class="project">
                 <h3>3D Story-Driven Shooter Prototype (Unity)</h3>
